# ecto-rust

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
engine/: Cargo.toml
engine/src/: ffi.rs  lib.rs  mutations.rs  semantic.rs  stable_id.rs  ui_layer.rs  wasm.rs
engine/src/ectoscript/: ast.rs  compiler.rs  lexer.rs  mod.rs  outline.rs  parser.rs  starter.rs
engine/src/graph/: edge.rs  kinds.rs  mod.rs  node.rs  normalized.rs  types.rs
engine/src/importer/: mod.rs  parse_css.rs  parse_js.rs  resolve.rs  types.rs
engine/src/render/: mod.rs  patch.rs  stylesheet.rs  tree.rs
engine/tests/: import_fixture.rs  storm_mixins.scss  storm_variables.scss  stormbase_fixture.rs
host-ios/: README.md
host-ios/EctoHost/Bridge/: EngineBridge.swift  ecto_engine.h
mini-runtime/: Cargo.toml
mini-runtime/examples/: load_payload.rs  toggle.rs
mini-runtime/src/: cypher.rs  graph.rs  lib.rs  patch.rs  runtime.rs  snapshot.rs  toggle_app.rs  value.rs
mini-runtime/tests/: toggle.rs
server/: package.json  tsconfig.json
server/.bundle-cache/browser/: 61ce9f56e3875d43.mjs
server/.bundle-cache/entries/: 4063d48d4f786e0f.entry.js  61ce9f56e3875d43.entry.js
server/.bundle-cache/install/4063d48d4f786e0f/: package.json
server/.bundle-cache/install/61ce9f56e3875d43/: package.json
server/.bundle-cache/server/: 4063d48d4f786e0f.cjs
server/src/: aiAgentEngine.ts  aiMiniAppGenerator.ts  aiSemanticEnhancer.ts  aiViewGenerator.ts  aiVoiceProcessor.ts  db.ts  designSystemWatcher.ts  graphSummary.ts  index.ts  loadEnv.ts  modelProvider.ts  repo.ts
server/src/bundler/: index.ts
server/src/sidecar/: host.ts  worker.mjs
shared/: package.json
shared/src/: index.ts
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  MiniAppView.tsx  MiniToggleApp.tsx  NpmSandbox.tsx  Preview.tsx  PromptToolbar.tsx  Timeline.tsx  engine.ts  fixture.ts  miniTemplates.ts  npmLoader.ts  socket.ts  stormbaseLoader.ts  ui.tsx
web/src/components/: EctoEditor.tsx  EctoStudio.tsx  Graph3DPanel.tsx  GraphJsonPanel.tsx  InspectorPanel.tsx  RuntimePreview.tsx  RuntimeView.tsx
web/src/fixtures/: stormbase.ts
web/src/lib/ectoscript/: compiler.ts  graph.ts  monacoLanguage.ts  parser.ts  runtime.tsx  tokens.ts
