[workspace]
resolver = "2"
members = ["engine", "mini-runtime"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tom <attasi.xiii@gmail.com>"]
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Pinned to <2.10 so we stay on hashbrown 0.15. Newer indexmap pulls in
# hashbrown 0.17 which panics under wasm32 with
# `assertion failed: buckets.is_power_of_two()` on certain table sizes.
indexmap = { version = "=2.9.0", features = ["serde"] }
fnv = "1"
once_cell = "1"
