[package]
name = "ecto-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ecto graph engine: portable Rust core for the codebase-as-graph runtime"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
fnv.workspace = true
once_cell.workspace = true
oxc_allocator = "0.105"
oxc_ast = "0.105"
oxc_parser = "0.105"
oxc_span = "0.105"
oxc_syntax = "0.105"
lightningcss = { version = "1.0.0-alpha.69", default-features = false, features = ["visitor"] }
grass = { version = "0.13", default-features = false }
base64 = "0.22"
regex = "1"
mini-runtime = { path = "../mini-runtime" }

# WASM bindings — only compiled for wasm32 targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"

