[package]
name = "mini-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ecto mini-runtime: graph-as-source-of-truth reactive UI prototype"

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[example]]
name = "toggle"
path = "examples/toggle.rs"

[[example]]
name = "load_payload"
path = "examples/load_payload.rs"

